--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
